# vtec-opencv

./: README.md  SW-Content_register.txt  build.sh
modules/imx2d/: CMakeLists.txt  README.md
modules/imx2d/cmake/: Imx2dHalConfig.cmake
modules/imx2d/common/include/: imx2d_common.hpp
modules/imx2d/common/src/: imx2d_common.cpp
modules/imx2d/hal/: CMakeLists.txt
modules/imx2d/hal/include/: imx2d_hal.hpp
modules/imx2d/hal/src/: imx2d_hal.cpp  imx2d_hal_resize.cpp  imx2d_hal_transform.cpp  imx2d_hal_utils.cpp  imx2d_hal_utils.hpp
modules/imx2d/include/: profiler.hpp
modules/imx2d/include/opencv2/: imx2d.hpp
modules/imx2d/media/: opencv2d_mat_csc_memory_cycle.odg  opencv2d_mat_graphic_memory_cycle.odg  opencv2d_mat_sys_memory_cycle.odg  opencv2d_overview.odg
modules/imx2d/perf/: perf_flip.cpp  perf_flip_ocl.cpp  perf_main.cpp  perf_precomp.hpp  perf_resize.cpp  perf_resize_ocl.cpp  perf_rotate.cpp  perf_rotate_ocl.cpp
modules/imx2d/samples/: video_test.cpp
modules/imx2d/src/: imx2d.cpp
modules/imx2d/test/: test_g2d_mat.cpp  test_main.cpp  test_precomp.hpp
modules/warp/: CMakeLists.txt
modules/warp/include/: v4l-helpers.h
modules/warp/include/opencv2/: warp.hpp
modules/warp/src/: warp.cpp
patches/: 0001-Merge-pull-request-24233-from-jvuillaumier-rotate_fl.patch  0001-core-Add-HAL-hook-for-flip-function.patch  0002-core-Add-HAL-hook-for-rotate-function.patch
